# GMSIdrivers

./: README.md
ISISALSA/: fork.md
ISISALSA/alsa-driver-0.9.5-isis/: acinclude.m4  aclocal.m4  configure  toplevel.config  toplevel.config.in
ISISALSA/alsa-driver-0.9.5-isis/include/: asound.h  config.h  config1.h  config1.h.in  version.h
ISISALSA/alsa-driver-0.9.5-isis/pci/: Makefile
ISISALSA/alsa-driver-0.9.5-isis/utils/: buildrpm  mod-deps
ISISALSA/maxiinit-0.2.1/: Makefile  Makefile.am  Makefile.in  README  configure  configure.in  maxiinit.kdevprj  maxiinit.lsm
ISISALSA/maxiinit-0.2.1/autom4te-2.53.cache/: output.0
ISISALSA/maxiinit-0.2.1/maxiinit-0.2.1/: AUTHORS  config.h  config.status  configure.in.in  libtool  subdirs
ISISALSA/maxiinit-0.2.1/maxiinit-0.2.1/maxiinit/: Makefile  Makefile.am  Makefile.in
ISISALSA/maxiinit-0.2.1/maxiinit-0.2.1/maxiinit/docs/en/: Makefile  index-1.html  index-3.html  index-4.html  index.html
ISISALSA/maxiinit-0.2.1/maxiinit-0.2.1/maxiinit/lib/: config.h  config.mk  libpci.h
Win95/: Aecu.sys  BANK4M.94B  CRL197X.VXD  CRLDS3D.VXD  CRLP3D.TXT  DATA.TAG  ES197X.DRV  ES197X.VXD  ES197X.drv  ES197X.vxd  ESENUM.VXD  ESENUM.vxd  ESMGR.VXD  ESMGR.vxd  GSTAGE.vxd  ISIS.drv  MAESTRO.COM  MAESTRO.INF  MSJSTICK.DRV  MSTR401.DRV  MSTR401.VXD  MSTR401.drv  MSTR401.vxd  MSTROWT.INF  MSTRSBP.VXD  MSTRSBP.vxd  PLAT2MEG.IMG  SETUP.INI  SETUP.INS  _SYS1.CAB  _USER1.CAB  maestro.com  maestro.inf  mstrowt.inf  sha256.csv
code/: Makefile  maestro2em.c  todo.md
infos/: Copilot_analysis.md  GPT5-DS_analisys.md  GPT5.md  GPT5_REplan.md
(+25 files in other folders)
