####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = maxiinit

## INCLUDES were found outside kdevelop specific part

maxiinit_SOURCES = main.cpp 
maxiinit_LDADD   = lib/libpci.a

SUBDIRS = docs 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
maxiinit_LDFLAGS = $(all_libraries) 
                                                                                
